# scalping-utilities

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
scalping_utilities/: amazon_bot_form.py  amazon_bot_mobile.py  cli.py  discord_bot.py  ebay.py  extract_offering_id.py  models.py
